--- a/static/css/product_cards.css
+++ b/static/css/product_cards.css
@@ -86,12 +86,11 @@
     left: 0;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 .carousel-inner {
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: relative;
     width: 100%;
     height: 100%;
     display: flex;
@@ -99,16 +98,9 @@
 }
 
 .carousel-item {
-    position: absolute;
-    width: 100%;
+    min-width: 100%;
     height: 100%;
-    flex-shrink: 0;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-}
-
-.carousel-item.active {
-    opacity: 1;
+    flex: 0 0 100%;
 }
 
 .carousel-item img {
