--- a/static/css/animations.css
+++ b/static/css/animations.css
@@ -131,7 +131,7 @@
     font-weight: 700;
     background: linear-gradient(to bottom right, #d4b483, #C8A870);
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    background-clip: text;
     margin-bottom: 1rem;
     display: flex;
     align-items: center;
@@ -144,7 +144,7 @@
 .stat-number span {
     background: linear-gradient(to bottom right, #d4b483, #C8A870);
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    background-clip: text;
     font-size: 2.5rem;
     font-weight: 600;
 }
