--- a/static/css/product_cards.css
+++ b/static/css/product_cards.css
@@ -191,8 +191,11 @@
     margin: 0;
     line-height: 1.5;
     display: -webkit-box;
+    display: box;
     -webkit-line-clamp: 2;
+    line-clamp: 2;
     -webkit-box-orient: vertical;
+    box-orient: vertical;
     overflow: hidden;
 }
 
