--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,7 @@
     <link rel="stylesheet" href="{% static 'css/why-choose-us.css' %}">
     <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
     <link rel="stylesheet" href="{% static 'css/mobile.css' %}">
+    <link rel="stylesheet" href="{% static 'css/location.css' %}">
     
     {% block extra_css %}{% endblock %}
 </head>
