Update main template layout and add responsive navigation menu

--- a/templates/main.html
+++ b/templates/main.html
@@ -219,7 +219,7 @@
                 <div class="about-item location-card">
                     <h3 class="location-title">Работа</h3>
                     <p class="location-address">Ташкент, улица Буюк Ипак Йули, 233</p>
-                    <p class="location-coordinates">Координаты: <span class="coordinate-values">41.334487, 69.352042</span> <i class="fas fa-copy"></i></p>
+                    <p class="location-coordinates"><small>Координаты: <span class="coordinate-values">41.334487, 69.352042</span></small></p>
 
                 </div>
                 <div class="about-item">
