Update main template layout and fix responsive styling issues

--- a/templates/main.html
+++ b/templates/main.html
@@ -217,7 +217,7 @@
             </form>
             <div class="contact-info">
                 <div class="about-item location-card">
-                    <h3 class="location-title">Работа</h3>
+                    <h3 class="location-title">Адрес</h3>
                     <p class="location-address">Ташкент, улица Буюк Ипак Йули, 233</p>
                     <p class="location-coordinates"><small>Координаты: <span class="coordinate-values">41.334487, 69.352042</span></small></p>
 
