--- a/templates/catalog/furniture_detail.html
+++ b/templates/catalog/furniture_detail.html
@@ -96,8 +96,7 @@
                 
                 <!-- Call to Action Buttons -->
                 <div class="product-actions">
-                    <a href="tel:+998903564334" class="action-button primary-button"><i class="fas fa-phone-alt"></i> Обсудить заказ</a>
-                    <a href="https://wa.me/998903564334?text=Здравствуйте! Меня интересует {{ item.name }}" target="_blank" class="action-button secondary-button"><i class="fab fa-whatsapp"></i> WhatsApp</a>
+                    <a href="tel:+998903564334" class="btn btn-primary"><i class="fas fa-phone-alt"></i> Обсудить заказ</a>
                 </div>
             </div>
         </div>
