--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
     <!-- Core CSS -->
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link rel="stylesheet" href="{% static 'css/theme.css' %}">
+    <link rel="stylesheet" href="{% static 'css/buttons.css' %}">
     
     <!-- Page-specific CSS -->
     {% block extra_css %}{% endblock %}
