--- a/templates/catalog/category_detail.html
+++ b/templates/catalog/category_detail.html
@@ -56,7 +56,7 @@
                             {% endif %}
                         </div>
                         <div class="item-action">
-                            <span class="view-details">Подробнее <i class="fas fa-arrow-right"></i></span>
+                            <span class="btn btn-text">Подробнее <i class="fas fa-arrow-right"></i></span>
                         </div>
                     </div>
                 </div>
@@ -68,7 +68,7 @@
             <i class="fas fa-box-open no-items-icon"></i>
             <h3>Товары не найдены</h3>
             <p>В данной категории пока нет товаров. Пожалуйста, посетите страницу позже или выберите другую категорию.</p>
-            <a href="{% url 'catalog' %}" class="catalog-action-button"><i class="fas fa-th-large"></i> Вернуться в каталог</a>
+            <a href="{% url 'catalog' %}" class="btn btn-primary"><i class="fas fa-th-large"></i> Вернуться в каталог</a>
         </div>
         {% endif %}
     </div>
